--- a/authSite/templates/registration/password_reset_complete.html
+++ b/authSite/templates/registration/password_reset_complete.html
@@ -3,5 +3,5 @@
 {% block title %} Password Change Confirm {% endblock title %}
 
 {% block content %}
-    <p>You're password has been changes.</p>
+    <p>You're password has been changed.</p>
 {% endblock content %}
