--- a/authSite/templates/registration/password_reset_confirm.html
+++ b/authSite/templates/registration/password_reset_confirm.html
@@ -3,9 +3,9 @@
 {% block title %} Password Change Confirm {% endblock title %}
 
 {% block content %}
-    <p>Please enter and confire your new password</p>
-    <form method="post">
+<form method="post">
         {% csrf_token %}
+        <p>Please enter and confirm your new password</p>
         {{form.as_p}}
         <button type="submit">Change Password</button>
     </form>
