--- a/authSite/templates/registration/password_reset_done.html
+++ b/authSite/templates/registration/password_reset_done.html
@@ -3,5 +3,5 @@
 {% block title %} Password Change Confirm {% endblock title %}
 
 {% block content %}
-    <p>We have emailded you the instruction for restting your password.</p>
+    <p>We have emailed you the instruction for restting your password.</p>
 {% endblock content %}
